# gnns

./: .gitignore  README.md  pyproject.toml
src/gnns/: bert_classifier.py  datasets.py  train.py  train_idgl.py  train_v2.py
src/gnns/dgm/: dgm_layers.py  layers.py  layers_dense.py  model.py  model_v2.py
src/gnns/glove/: extractor.py
src/gnns/idgl/: model.py  model_handler.py
src/gnns/idgl/config/: idgl.yml  idgl_anchor.yml
src/gnns/idgl/layers/: anchor.py  common.py  gnn.py  graphlearn.py  scalable_graphlearn.py
src/gnns/idgl/models/: graph_clf.py  text_graph.py
src/gnns/jobs/: train.sh  train_baseline.sh  train_dgm.sh  vis.sh  vis_cdgm.sh
src/gnns/jobs/logs/: 3002638.err  3002638.out  3002792.err  3002792.out  3002922.out  3002924.err  3002924.out  3002971.err  3002971.out  3003083.err  3003083.out  3003146.err  3003146.out  3003174.err  3003174.out  3003255.err  3003255.out  3003412.err  3003412.out  3003423.err  3003423.out  3003831.err  3003831.out  3004597.err  3004597.out  3004750.err  3004750.out  3006788.err  3006788.out  3006802.err  3006802.out  3006935.err  3006935.out  3007066.err  3007066.out  3007125.err  3007125.out  3007179.err  3007179.out  3007292.err  (+948 more)
src/gnns/logs/: parser.py  vis.py  vis_cdgm.py
src/gnns/logs/cdgm_google-embeddinggemma-300m_k10_gat_euclidean_poolmean/: notes.txt
src/gnns/logs_20news/dDGM_distilbert-base-uncased_k10_gat_euclidean_poolmean/: notes.txt
src/gnns/utils/: constants.py  functions.py  generic_utils.py  radam.py
src/gnns/utils/text_data/: data_utils.py  vocab_utils.py
(+788 files in other folders)
