[project]
name = "gnns"
version = "0.1.0"
description = ""
authors = [
    {name = "elichkaa",email = "elichka.cs@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "polars (>=1.37.1,<2.0.0)",
    "datasets (>=4.5.0,<5.0.0)",
    "transformers (>=4.57.6,<5.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pytorch-lightning (>=2.6.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "tbparse (>=0.0.9,<0.0.10)"
]

[tool.poetry]
packages = [{include = "gnns", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
